# ai-news-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.pipeline  LICENSE  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  docker-entrypoint-pipeline.sh  docker-entrypoint.sh  mkdocs.yml  nginx.conf  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_vector_column.py  003_raw_extractions.py  004_add_performance_indexes.py  005_users_and_otp.py  006_align_schema_with_models.py  007_add_effective_date_index.py  008_language_and_optimization.py  009_webauthn_credentials.py  010_composite_scoring.py  011_url_hash_unique.py  012_drop_duplicate_hnsw_index.py  013_reduce_embedding_dimensions.py  014_pipeline_runs_table.py  015_drop_redundant_url_hash_index.py  016_otp_attempts_column.py  017_fix_search_vector_definition.py
docs/: DESIGN_SYSTEM.md  MIGRATION-ai-news-path.md  index.md  milestone-history.md
docs/adr/: 001-remote-mcp-server.md
docs/architecture/: agents.md  overview.md
docs/contributing/: conventions.md
docs/frontend/: setup.md
docs/plans/: 2026-02-17-milestone-3-design.md  2026-02-17-milestone-3-plan.md  2026-02-18-design-overhaul-design.md  2026-02-18-design-overhaul-plan.md  2026-02-18-milestone-4-design.md  2026-02-18-milestone-4-plan.md  2026-02-18-milestone-5-design.md  2026-02-18-milestone-5-plan.md  2026-02-18-milestone-6-design.md  2026-02-18-milestone-6-plan.md  2026-02-19-design-fixes-plan.md  2026-02-19-e2e-playwright-plan.md  2026-02-19-e2e-tests-design.md  2026-02-19-milestone-9-design.md  2026-02-19-milestone-9-plan.md  2026-02-19-premium-design-plan.md  2026-02-19-visual-regression-design.md  2026-02-19-visual-regression-plan.md  2026-02-21-milestone-10-design.md  2026-02-21-milestone-10-plan.md  2026-02-21-milestone-11-design.md  2026-02-21-milestone-11-plan.md  2026-02-21-milestone-12-design.md  2026-02-21-milestone-12-plan.md  2026-02-21-milestone-13-design.md  2026-02-21-milestone-13-plan.md  2026-02-21-milestone-14-design.md  2026-02-21-milestone-14-plan.md  2026-02-21-milestone-15-design.md  2026-02-21-milestone-15-plan.md  2026-02-22-editorial-redesign-plan.md  2026-02-22-milestone-16-design.md  2026-02-22-milestone-16-plan.md  2026-02-22-pencil-react-frontend-design.md  2026-02-22-pencil-react-frontend-plan.md  2026-02-22-stitch-redesign-design.md  2026-02-23-react-frontend-v1-design.md  2026-02-23-react-frontend-v1-plan.md  2026-02-24-react-animations-design.md  2026-02-24-react-animations-plan.md  (+57 more)
docs/runbooks/: add-new-extractor.md  backup-restore.md  deployment.md  mcp-claude-code.md  troubleshooting.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
scripts/: backfill.py  backup.sh  health_check.sh  pipeline-scheduler.sh  rescore_all.py  rescore_composite.py
src/: main.py
src/api/: app.py  auth.py  errors.py  otp.py  pagination.py  ratelimit.py  schemas.py  webauthn.py
src/classifiers/: base.py  event_dedup.py  keyword.py  llm.py
src/core/: config.py  database.py  dates.py  logging.py  metrics.py  models.py  queries.py  ssrf.py  text_utils.py
src/extractors/: __init__.py  arxiv.py  base.py  github.py  github_trending.py  hackernews.py  hackernews_leading.py  huggingface.py  reddit.py  rss.py  webscraper.py
src/feed/: feed_builder.py  mmr_ranker.py  variant_collapse.py
src/mcp/: client.py  server.py
src/notifiers/: alerts.py  base.py  telegram.py
src/pipeline/: circuit_breaker.py  composite_scorer.py  dedup.py  pipeline.py  scheduler.py  validation.py
src/rag/: __init__.py  chat.py  embeddings.py  retriever.py
src/validators/: base.py  credibility.py
tests/: conftest.py  factories.py
web/: .gitignore  angular.json  package-lock.json  package.json  playwright.config.ts
web/src/: index.html  (+1 more)
(+199 files in other folders)
